--- a/docs/90-api/component.mdx
+++ b/docs/90-api/component.mdx
@@ -11,7 +11,7 @@ See also: [ScriptComponent](ScriptComponent)
 
 ### Object object {#Object-object}
 
-### Transform transform {#Transform-transform}
-
 ### bool isDestroyed {#bool-isDestroyed}
+
+### string type {#string-type}
 
