--- a/docs/90-api/enums/resourceUsage.mdx
+++ b/docs/90-api/enums/resourceUsage.mdx
@@ -3,10 +3,12 @@ title: ResourceUsage
 id: resourceUsage
 ---
 
+Hint for opengl/vulkan about how often you change the geometry (static = once, dynamic=more often, streamed = each frame)
+
 ## Properties
 
 | Name | Description |
 | - | - |
-| Static |  |
-| Dynamic |  |
-| Stream |  |
+| Static | once |
+| Dynamic | more often |
+| Stream | each frame |
