--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -11,13 +11,13 @@ id: Filter
 
 ## Properties
 
-### bool useCommon {#bool-useCommon}
+### bool useStatic {#bool-useStatic}
 
-### bool useAtlas {#bool-useAtlas}
+### bool useNotStatic {#bool-useNotStatic}
 
-### bool useTmp {#bool-useTmp}
+### bool useTmpStatic {#bool-useTmpStatic}
 
-### bool useTmpAtlas {#bool-useTmpAtlas}
+### bool useTmpNotStatic {#bool-useTmpNotStatic}
 
 ### table ignoreList {#table-ignoreList}
 contains objects
