--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -13,7 +13,7 @@ id: Object
 
 ### Script AddScript(string, bool) {#Script-AddScript-string-bool}
 
-### MeshData AddMeshData(string) {#MeshData-AddMeshData-string}
+### MeshData AddMeshData() {#MeshData-AddMeshData}
 
 ### VoxelData AddVoxelData(string) {#VoxelData-AddVoxelData-string}
 
