--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -13,6 +13,8 @@ id: Scene
 
 ### double GetDebugTime() {#double-GetDebugTime}
 
+### int GetCurrentFrame() {#int-GetCurrentFrame}
+
 ### Object CreateObject() {#Object-CreateObject}
 
 ### Object CreateObject(string, bool, bool) {#Object-CreateObject-string-bool-bool}
@@ -58,6 +60,8 @@ id: Scene
 ### table TraceRay(table) {#table-TraceRay-table}
 
 ### bool IsNameValid(string) {#bool-IsNameValid-string}
+
+### string MakeNameValid(string) {#string-MakeNameValid-string}
 
 ### nil RebuildLighting() {#nil-RebuildLighting}
 
