--- a/docs/90-api/transform.mdx
+++ b/docs/90-api/transform.mdx
@@ -27,23 +27,29 @@ id: Transform
 
 ### Object object {#Object-object}
 
-### Vec3 pos {#Vec3-pos}
+### bool isDestroyed {#bool-isDestroyed}
 
-### float scale {#float-scale}
+### string type {#string-type}
+
+### Vec3 localPos {#Vec3-localPos}
+
+### float localScale {#float-localScale}
+
+### Quat localRot {#Quat-localRot}
+
+### Vec3 localEulerRot {#Vec3-localEulerRot}
+
+### Vec3 pos {#Vec3-pos}
 
 ### Quat rot {#Quat-rot}
 
-### Vec3 globalPos {#Vec3-globalPos}
-
-### Quat globalRot {#Quat-globalRot}
-
 ### Vec3 eulerRot {#Vec3-eulerRot}
+
+### float scale {#float-scale}
 
 ### Vec3 right {#Vec3-right}
 
 ### Vec3 up {#Vec3-up}
 
 ### Vec3 forward {#Vec3-forward}
-
-### string type {#string-type}
 
