--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -9,10 +9,13 @@ id: VoxelDataResource
 
 ### VoxelDataResource new(string, bool) {#VoxelDataResource-new-string-bool}
 
+### VoxelDataResource new() {#VoxelDataResource-new}
+
 ### VoxelDataResource new(string) {#VoxelDataResource-new-string}
 
 ### string Save(string, bool) {#string-Save-string-bool}
 save voxel data in AM file
+second parameter controls if file will be overwritten
 
 ### float, float GetBounds() {#float-float-GetBounds}
 
