--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -9,9 +9,9 @@ id: VoxelDB
 
 ### nil Clear() {#nil-Clear}
 
-### nil SetSerialOpId(int) {#nil-SetSerialOpId-int}
-
 ### nil Flush() {#nil-Flush}
+Flush() adds special operation in queue, which waits for all running ops to finish.
+If we had flush after each op, it would eliminate all multithreaded processing.
 
 ### Vec3i FromWorld(Vec3) {#Vec3i-FromWorld-Vec3}
 
@@ -30,6 +30,9 @@ id: VoxelDB
 ### bool GetMask(double, double, double) {#bool-GetMask-double-double-double}
 
 ### int GetMaskNeighbours(Vec3i, int) {#int-GetMaskNeighbours-Vec3i-int}
+int is the neighbourhood radius, 1 means it's from pos - 1 to pos + 1, 
+sum of voxles in 3x3 square without center (0-26)
+it should be in range 1-8
 
 ### int GetMaskNeighbours(double, double, double, int) {#int-GetMaskNeighbours-double-double-double-int}
 
@@ -154,6 +157,10 @@ id: VoxelDB
 ### userdata InspectNormals(this_state, Vec3, Vec3, float, int, int) {#userdata-InspectNormals-thisstate-Vec3-Vec3-float-int-int}
 
 ### VoxelInspectData Inspect(Vec3, Vec3, float, int, int, table, int) {#VoxelInspectData-Inspect-Vec3-Vec3-float-int-int-table-int}
+
+### int GetLODsCount() {#int-GetLODsCount}
+
+### table GetLayerStats(this_state, string) {#table-GetLayerStats-thisstate-string}
 
 ### table GetUsedLayers() {#table-GetUsedLayers}
 
