--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -5,6 +5,14 @@ id: VoxelData
 `Client`
 `Server`
 
+## Constructors
+
+### VoxelData() {#VoxelData}
+
+## Methods
+
+### bool, string SetPath(string) {#bool-string-SetPath-string}
+
 ## Metamethods
 
 ### bool __eq(VoxelData, VoxelData) {#bool-eq-VoxelData-VoxelData}
@@ -13,9 +21,9 @@ id: VoxelData
 
 ### Object object {#Object-object}
 
-### Transform transform {#Transform-transform}
-
 ### bool isDestroyed {#bool-isDestroyed}
+
+### string type {#string-type}
 
 ### string path {#string-path}
 
@@ -25,10 +33,4 @@ id: VoxelData
 make local copy of voxel data resource if edited 
 
 ### bool save {#bool-save}
-
-### string type {#string-type}
-
-### Object object {#Object-object}
-
-### Transform transform {#Transform-transform}
 
