--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -14,6 +14,7 @@ id: Filter
 ### bool useStatic {#bool-useStatic}
 
 ### bool useNotStatic {#bool-useNotStatic}
+use dynamic voxel objects
 
 ### bool useTmpStatic {#bool-useTmpStatic}
 
