--- a/docs/80-framerate-tips.mdx
+++ b/docs/80-framerate-tips.mdx
@@ -1,6 +1,6 @@
-# Framerate tips
+# Framerate Tips
 
 * If you are using a laptop with both dedicated and integrated GPU disable the integrated gpu for your browser
 * In the future we will release a downloadable standalone client that will perfom much better
-* Contact us on discord for help 
+* Contact us on discord for more help 
 
