--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -194,7 +194,9 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### nil ToggleVREnabled(string) {#nil-ToggleVREnabled-string}
 
-### Vec3, Quat GetVREyeTransform(int) {#Vec3-Quat-GetVREyeTransform-int}
+### Vec3, Quat GetVREyeTransform(int, Space) {#Vec3-Quat-GetVREyeTransform-int-Space}
+
+### Vec3, Quat GetVRHeadsetTransform(Space) {#Vec3-Quat-GetVRHeadsetTransform-Space}
 
 ### bool GetVREyeTrackingSupported() {#bool-GetVREyeTrackingSupported}
 
