--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -102,6 +102,8 @@ int passed is the unique ID of that touch obtained i.e. from Input:Fingers() or 
 
 ### Vec3 VRControllerDir(int) {#Vec3-VRControllerDir-int}
 
+### Vec3, Quat VRControllerTransform(int, Space) {#Vec3-Quat-VRControllerTransform-int-Space}
+
 ### userdata Gamepads() {#userdata-Gamepads}
 
 ### userdata GetActiveGamepad() {#userdata-GetActiveGamepad}
