--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -59,6 +59,14 @@ id: Scene
 
 ### table TraceRay(table) {#table-TraceRay-table}
 
+### Vec3 ConvertWcToDc(VoxelRenderer, Vec3) {#Vec3-ConvertWcToDc-VoxelRenderer-Vec3}
+
+### table ConvertWcToDc(this_state, VoxelRenderer, table) {#table-ConvertWcToDc-thisstate-VoxelRenderer-table}
+
+### Vec3 ConvertDcToWc(VoxelRenderer, Vec3) {#Vec3-ConvertDcToWc-VoxelRenderer-Vec3}
+
+### table ConvertDcToWc(this_state, VoxelRenderer, table) {#table-ConvertDcToWc-thisstate-VoxelRenderer-table}
+
 ### bool IsNameValid(string) {#bool-IsNameValid-string}
 
 ### string MakeNameValid(string) {#string-MakeNameValid-string}
