--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -105,6 +105,8 @@ This class is only available on server
 
 ### nil GenTestVoxelScene2() {#nil-GenTestVoxelScene2}
 
+### nil GenTestVoxelScene3() {#nil-GenTestVoxelScene3}
+
 ### nil MakeVoxelScene(int, int, int, int) {#nil-MakeVoxelScene-int-int-int-int}
 
 ### nil RebuildLODsBrightnessMethod() {#nil-RebuildLODsBrightnessMethod}
