--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -154,9 +154,9 @@ it should be in range 1-8
 
 ### bool Save(string, string, int) {#bool-Save-string-string-int}
 
-### userdata InspectNormals(this_state, Vec3, Vec3, float, int, int) {#userdata-InspectNormals-thisstate-Vec3-Vec3-float-int-int}
+### userdata InspectNormals(this_state, Vec3, int, int) {#userdata-InspectNormals-thisstate-Vec3-int-int}
 
-### VoxelInspectData Inspect(Vec3, Vec3, float, int, int, table, int) {#VoxelInspectData-Inspect-Vec3-Vec3-float-int-int-table-int}
+### userdata Inspect(this_state, Vec3, int, int, table, int) {#userdata-Inspect-thisstate-Vec3-int-int-table-int}
 
 ### int GetLODsCount() {#int-GetLODsCount}
 
