--- a/docs/90-api/collision.mdx
+++ b/docs/90-api/collision.mdx
@@ -19,7 +19,10 @@ use rayPos, rayDir, returns table of Hit values or empty table for no hit
 ### table Raycast(Vec3, Vec3) {#table-Raycast-Vec3-Vec3}
 use rayPos, rayDir, returns table of Hit values or empty table for no hit
 
-### bool Check() {#bool-Check}
+### table GetOverlap() {#table-GetOverlap}
+checks collision between shape and geometry passed by filter
+
+### table GetOverlap(Shape) {#table-GetOverlap-Shape}
 checks collision between shape and geometry passed by filter
 
 ## Properties
@@ -30,6 +33,8 @@ checks collision between shape and geometry passed by filter
 doesn't influence result, just limits returned hits table size
 
 ### Shape shape {#Shape-shape}
+
+### bool precise {#bool-precise}
 
 ### Vec3 rayPos {#Vec3-rayPos}
 
