--- a/docs/90-api/material.mdx
+++ b/docs/90-api/material.mdx
@@ -15,7 +15,7 @@ id: Material
 
 ### bool IsManaged() {#bool-IsManaged}
 
-### bool HasProperty(string) {#bool-HasProperty-string}
+### bool HasProperty(Material, string) {#bool-HasProperty-Material-string}
 
 ### Vec3 GetPropertyVec3(Material, string) {#Vec3-GetPropertyVec3-Material-string}
 
