--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -63,6 +63,8 @@ This class is only available on server
 
 ### table GetErrors() {#table-GetErrors}
 
+### int GetMaxConnections() {#int-GetMaxConnections}
+
 ### bool GetStartedWithOriginalScripts() {#bool-GetStartedWithOriginalScripts}
 
 ### nil OverwriteWithOriginalScripts() {#nil-OverwriteWithOriginalScripts}
