--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -36,3 +36,5 @@ returns true if data was modified
 ### float volumePerc {#float-volumePerc}
 Approximate. Quickly count non-zero blocks of voxel object. Block size is 8x8x8. Block can be fully filled or just 1 voxel
 
+### float scaleToStatic {#float-scaleToStatic}
+
