--- a/docs/90-api/voxelRenderer.mdx
+++ b/docs/90-api/voxelRenderer.mdx
@@ -29,3 +29,7 @@ id: VoxelRenderer
 
 ### bool outline {#bool-outline}
 
+### Vec4 tintColor {#Vec4-tintColor}
+
+### bool receiveTransform {#bool-receiveTransform}
+
