Update docs and some fixes

--- a/docs/90-api/box.mdx
+++ b/docs/90-api/box.mdx
@@ -5,11 +5,11 @@ id: Box
 `Client`
 `Server`
 
-## Methods
+## Constructors
 
-### Shape new() {#Shape-new}
+### Box() {#Box}
 
-### Shape new(Vec3, Vec3) {#Shape-new-Vec3-Vec3}
+### Box(Vec3, Vec3) {#Box-Vec3-Vec3}
 
-### Shape new(Vec3) {#Shape-new-Vec3}
+### Box(Vec3) {#Box-Vec3}
 
