--- a/docs/90-api/capsule.mdx
+++ b/docs/90-api/capsule.mdx
@@ -5,17 +5,11 @@ id: Capsule
 `Client`
 `Server`
 
-## Methods
+## Constructors
 
-### Shape new() {#Shape-new}
+### Capsule() {#Capsule}
 
-### Shape new(Vec3, float) {#Shape-new-Vec3-float}
+### Capsule(Vec3, Vec3, float, float) {#Capsule-Vec3-Vec3-float-float}
 
-### Shape new(Vec3) {#Shape-new-Vec3}
-
-### Shape new() {#Shape-new}
-
-### Shape new(Vec3, Vec3, float, float) {#Shape-new-Vec3-Vec3-float-float}
-
-### Shape new(Vec3, Vec3) {#Shape-new-Vec3-Vec3}
+### Capsule(Vec3, Vec3) {#Capsule-Vec3-Vec3}
 
