--- a/docs/90-api/cylinder.mdx
+++ b/docs/90-api/cylinder.mdx
@@ -5,23 +5,11 @@ id: Cylinder
 `Client`
 `Server`
 
-## Methods
+## Constructors
 
-### Shape new() {#Shape-new}
+### Cylinder() {#Cylinder}
 
-### Shape new(Vec3, float) {#Shape-new-Vec3-float}
+### Cylinder(Vec3, Vec3, float, float) {#Cylinder-Vec3-Vec3-float-float}
 
-### Shape new(Vec3) {#Shape-new-Vec3}
-
-### Shape new() {#Shape-new}
-
-### Shape new(Vec3, Vec3, float, float) {#Shape-new-Vec3-Vec3-float-float}
-
-### Shape new(Vec3, Vec3) {#Shape-new-Vec3-Vec3}
-
-### Shape new() {#Shape-new}
-
-### Shape new(Vec3, Vec3, float, float) {#Shape-new-Vec3-Vec3-float-float}
-
-### Shape new(Vec3, Vec3) {#Shape-new-Vec3-Vec3}
+### Cylinder(Vec3, Vec3) {#Cylinder-Vec3-Vec3}
 
