--- a/docs/90-api/input.mdx
+++ b/docs/90-api/input.mdx
@@ -96,6 +96,8 @@ int passed is the unique ID of that touch obtained i.e. from Input:Fingers() or 
 
 ### Vec2 VRThumbStick(int) {#Vec2-VRThumbStick-int}
 
+### Vec2 VRTrackpad(int) {#Vec2-VRTrackpad-int}
+
 ### bool VRIsControllerValid(int) {#bool-VRIsControllerValid-int}
 
 ### Vec3 VRControllerPos(int) {#Vec3-VRControllerPos-int}
