--- a/docs/90-api/quat.mdx
+++ b/docs/90-api/quat.mdx
@@ -9,21 +9,17 @@ id: Quat
 
 ### Quat() {#Quat}
 
-### Quat(Quat) {#Quat-Quat}
-
-### Quat(float, float, float, float) {#Quat-float-float-float-float}
-
 ### Quat(float, Vec3) {#Quat-float-Vec3}
-
-### Quat(Mat3) {#Quat-Mat3}
 
 ### Quat(Mat4) {#Quat-Mat4}
 
+### Quat(Mat3) {#Quat-Mat3}
+
+### Quat(float, float, float, float) {#Quat-float-float-float-float}
+
+### Quat(Quat) {#Quat-Quat}
+
 ## Metamethods
-
-### float __index(Quat, int) {#float-index-Quat-int}
-
-### nil __newindex(Quat, int, float) {#nil-newindex-Quat-int-float}
 
 ### Quat __add(Quat, Quat) {#Quat-add-Quat-Quat}
 
@@ -50,6 +46,8 @@ id: Quat
 ## Methods
 
 ### float Len() {#float-Len}
+
+### float Length() {#float-Length}
 
 ### float SqrLength() {#float-SqrLength}
 
