--- a/docs/90-api/scene.mdx
+++ b/docs/90-api/scene.mdx
@@ -61,11 +61,11 @@ id: Scene
 
 ### Vec3 ConvertWcToDc(VoxelRenderer, Vec3) {#Vec3-ConvertWcToDc-VoxelRenderer-Vec3}
 
-### table ConvertWcToDc(this_state, VoxelRenderer, table) {#table-ConvertWcToDc-thisstate-VoxelRenderer-table}
+### table ConvertWcToDc(VoxelRenderer, table) {#table-ConvertWcToDc-VoxelRenderer-table}
 
 ### Vec3 ConvertDcToWc(VoxelRenderer, Vec3) {#Vec3-ConvertDcToWc-VoxelRenderer-Vec3}
 
-### table ConvertDcToWc(this_state, VoxelRenderer, table) {#table-ConvertDcToWc-thisstate-VoxelRenderer-table}
+### table ConvertDcToWc(VoxelRenderer, table) {#table-ConvertDcToWc-VoxelRenderer-table}
 
 ### bool IsNameValid(string) {#bool-IsNameValid-string}
 
