--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -75,6 +75,12 @@ This class is only available on server
 
 ### nil HttpGet(string, table, userdata) {#nil-HttpGet-string-table-userdata}
 
+### nil HttpDownload(string, table, userdata) {#nil-HttpDownload-string-table-userdata}
+
+### bool MoveFileToMontageVoxelsFolder(File, string) {#bool-MoveFileToMontageVoxelsFolder-File-string}
+
+### nil MakeUrlForFile(File) {#nil-MakeUrlForFile-File}
+
 ### AssetManager GetResourceManScene() {#AssetManager-GetResourceManScene}
 
 ### AssetManager GetResourceManUI() {#AssetManager-GetResourceManUI}
@@ -86,6 +92,8 @@ This class is only available on server
 ### table GetLogTimers(string) {#table-GetLogTimers-string}
 
 ### table GetStreamingStats() {#table-GetStreamingStats}
+
+### table GetMainDispatcherStats() {#table-GetMainDispatcherStats}
 
 ### nil TriggerCrash() {#nil-TriggerCrash}
 
@@ -122,6 +130,8 @@ This class is only available on server
 ### bool ShowAllNormalsPerVoxel(int) {#bool-ShowAllNormalsPerVoxel-int}
 
 ### bool ShowAllNormalsPerBT(int) {#bool-ShowAllNormalsPerBT-int}
+
+### nil PBRTranscodeToPBR0Ver1() {#nil-PBRTranscodeToPBR0Ver1}
 
 ## Properties
 
