--- a/docs/90-api/sphere.mdx
+++ b/docs/90-api/sphere.mdx
@@ -5,11 +5,11 @@ id: Sphere
 `Client`
 `Server`
 
-## Methods
+## Constructors
 
-### Shape new() {#Shape-new}
+### Sphere() {#Sphere}
 
-### Shape new(Vec3, float) {#Shape-new-Vec3-float}
+### Sphere(Vec3, float) {#Sphere-Vec3-float}
 
-### Shape new(Vec3) {#Shape-new-Vec3}
+### Sphere(Vec3) {#Sphere-Vec3}
 
