--- a/docs/90-api/vec2.mdx
+++ b/docs/90-api/vec2.mdx
@@ -97,6 +97,8 @@ id: Vec2
 
 ### float Len() {#float-Len}
 
+### float Length() {#float-Length}
+
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
