--- a/docs/90-api/vec2i.mdx
+++ b/docs/90-api/vec2i.mdx
@@ -97,6 +97,8 @@ id: Vec2i
 
 ### int Len() {#int-Len}
 
+### int Length() {#int-Length}
+
 ### int SqrLength() {#int-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
