--- a/docs/90-api/vec3.mdx
+++ b/docs/90-api/vec3.mdx
@@ -119,6 +119,8 @@ id: vec3
 
 ### float Len() {#float-Len}
 
+### float Length() {#float-Length}
+
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
