--- a/docs/90-api/vec3i.mdx
+++ b/docs/90-api/vec3i.mdx
@@ -117,6 +117,8 @@ id: Vec3i
 
 ### int Len() {#int-Len}
 
+### int Length() {#int-Length}
+
 ### int SqrLength() {#int-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
