--- a/docs/90-api/vec4.mdx
+++ b/docs/90-api/vec4.mdx
@@ -185,6 +185,8 @@ id: Vec4
 
 ### float Len() {#float-Len}
 
+### float Length() {#float-Length}
+
 ### float SqrLength() {#float-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
