--- a/docs/90-api/vec4i.mdx
+++ b/docs/90-api/vec4i.mdx
@@ -185,6 +185,8 @@ id: Vec4i
 
 ### int Len() {#int-Len}
 
+### int Length() {#int-Length}
+
 ### int SqrLength() {#int-SqrLength}
 
 ### bool IsZero() {#bool-IsZero}
