--- a/docs/90-api/voxelDB.mdx
+++ b/docs/90-api/voxelDB.mdx
@@ -154,13 +154,13 @@ it should be in range 1-8
 
 ### bool Save(string, string, int) {#bool-Save-string-string-int}
 
-### userdata InspectNormals(this_state, Vec3, int, int) {#userdata-InspectNormals-thisstate-Vec3-int-int}
+### userdata InspectNormals(Vec3, int, int) {#userdata-InspectNormals-Vec3-int-int}
 
-### userdata Inspect(this_state, Vec3, int, int, table, int) {#userdata-Inspect-thisstate-Vec3-int-int-table-int}
+### userdata Inspect(Vec3, int, int, table, int) {#userdata-Inspect-Vec3-int-int-table-int}
 
 ### int GetLODsCount() {#int-GetLODsCount}
 
-### table GetLayerStats(this_state, string) {#table-GetLayerStats-thisstate-string}
+### table GetLayerStats(string) {#table-GetLayerStats-string}
 
 ### table GetUsedLayers() {#table-GetUsedLayers}
 
