--- a/docs/90-api/voxelDataResource.mdx
+++ b/docs/90-api/voxelDataResource.mdx
@@ -5,13 +5,15 @@ id: VoxelDataResource
 `Client`
 `Server`
 
+## Constructors
+
+### VoxelDataResource(string, bool) {#VoxelDataResource-string-bool}
+
+### VoxelDataResource() {#VoxelDataResource}
+
+### VoxelDataResource(string) {#VoxelDataResource-string}
+
 ## Methods
-
-### VoxelDataResource new(string, bool) {#VoxelDataResource-new-string-bool}
-
-### VoxelDataResource new() {#VoxelDataResource-new}
-
-### VoxelDataResource new(string) {#VoxelDataResource-new-string}
 
 ### string Save(string, bool) {#string-Save-string-bool}
 save voxel data in AM file
