--- a/docs/90-api/voxelEdit.mdx
+++ b/docs/90-api/voxelEdit.mdx
@@ -47,6 +47,7 @@ parameters specify "cone" - two positions and end radius
 ### userdata filter {#userdata-filter}
 
 ### userdata shape {#userdata-shape}
+if shape is nil the operation will match all targets 
 
 ### bool clampToMinVoxelSize {#bool-clampToMinVoxelSize}
 
