--- a/docs/90-api/filter.mdx
+++ b/docs/90-api/filter.mdx
@@ -9,6 +9,10 @@ id: Filter
 
 ### Filter() {#Filter}
 
+### Filter(bool, bool) {#Filter-bool-bool}
+
+### Filter(table, table) {#Filter-table-table}
+
 ## Properties
 
 ### bool useStatic {#bool-useStatic}
