--- a/docs/90-api/object.mdx
+++ b/docs/90-api/object.mdx
@@ -47,6 +47,8 @@ id: Object
 
 ## Properties
 
+### int id {#int-id}
+
 ### Transform transform {#Transform-transform}
 
 ### bool isDestroyed {#bool-isDestroyed}
@@ -68,6 +70,8 @@ id: Object
 ### int childCount {#int-childCount}
 
 ### int siblingIndex {#int-siblingIndex}
+
+### bool isPrefabObject {#bool-isPrefabObject}
 
 ### table components {#table-components}
 
