--- a/docs/90-api/voxelData.mdx
+++ b/docs/90-api/voxelData.mdx
@@ -11,6 +11,8 @@ id: VoxelData
 
 ## Methods
 
+### nil Mirror(Vec3, Vec3) {#nil-Mirror-Vec3-Vec3}
+
 ### bool, string SetPath(string) {#bool-string-SetPath-string}
 
 ## Metamethods
@@ -33,4 +35,22 @@ id: VoxelData
 make local copy of voxel data resource if edited 
 
 ### bool save {#bool-save}
+
+### bool unpackOnLoad {#bool-unpackOnLoad}
+
+### bool releaseResources {#bool-releaseResources}
+
+### bool enforceReplaceRendSourceAndEntity {#bool-enforceReplaceRendSourceAndEntity}
+
+### bool ramCopy {#bool-ramCopy}
+
+### int potScale {#int-potScale}
+
+### bool paused {#bool-paused}
+
+### int startAtMs {#int-startAtMs}
+
+### double startAtFrame {#double-startAtFrame}
+
+### float playbackSpeed {#float-playbackSpeed}
 
