--- a/docs/90-api/voxelEdit.mdx
+++ b/docs/90-api/voxelEdit.mdx
@@ -9,6 +9,10 @@ id: VoxelEdit
 
 ### VoxelEdit() {#VoxelEdit}
 
+### VoxelEdit(Shape, Vec3) {#VoxelEdit-Shape-Vec3}
+
+### VoxelEdit(Shape) {#VoxelEdit-Shape}
+
 ## Methods
 
 ### nil Flush() {#nil-Flush}
