--- a/docs/90-api/client.mdx
+++ b/docs/90-api/client.mdx
@@ -226,7 +226,11 @@ Returns [`CommandLine`](/api/commandLine)
 
 ### double GetVRUserScaleMax() {#double-GetVRUserScaleMax}
 
-### nil SendFile(File) {#nil-SendFile-File}
+### bool SendFile(File) {#bool-SendFile-File}
+
+### bool SendFiles(table) {#bool-SendFiles-table}
+
+### nil Restart() {#nil-Restart}
 
 ### nil ChooseImage() {#nil-ChooseImage}
 
@@ -319,6 +323,8 @@ Returns [`CommandLine`](/api/commandLine)
 ### Guid userID {#Guid-userID}
 
 ### ClientMode mode {#ClientMode-mode}
+
+### bool isMaker {#bool-isMaker}
 
 ### string platform {#string-platform}
 
