--- a/docs/90-api/config.mdx
+++ b/docs/90-api/config.mdx
@@ -25,6 +25,9 @@ id: Config
 
 ### bool Exists(string) {#bool-Exists-string}
 
+### nil EmitChangeSignal() {#nil-EmitChangeSignal}
+force saving Config
+
 ### int GetInt(string) {#int-GetInt-string}
 
 ### int GetInt(string, int) {#int-GetInt-string-int}
