--- a/docs/90-api/server.mdx
+++ b/docs/90-api/server.mdx
@@ -28,6 +28,16 @@ This class is only available on server
 ### table, table GetLuaFilesList() {#table-table-GetLuaFilesList}
 
 ### table, table GetVoxelFilesList() {#table-table-GetVoxelFilesList}
+Voxel files in the Montage/Voxels, those you saved in your montage and they are not necessary uploaded to the cloud already. local montage assets
+
+### table, table GetMakerAssetsList() {#table-table-GetMakerAssetsList}
+Assets in cloud of maker that made this montage
+
+### table, table GetCommonAssetsList() {#table-table-GetCommonAssetsList}
+Common, those we provide cloud with as free to use
+
+### table, table GetCommonScenesList() {#table-table-GetCommonScenesList}
+Common scenes
 
 ### table GetPrefabsList() {#table-GetPrefabsList}
 
